--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About Me</h1>
+<hr>
+<p>I'm just starting to learn software development on my own. I find it fasinacting. I started with Wordpress and PHP, and I'm making my way into the world of Ruby right now. Next is JavaScript and JQuery.</p>
