--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -160,3 +160,16 @@ body {
     width: 55rem;
   }
 }
+
+/*
+ * My Custom CSS
+ */
+
+.card-block {
+  color: black;
+  text-align: left;
+ }
+
+.auth-links a {
+  color: black;
+ }
