--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -21,8 +21,9 @@
     <!-- start of blog header  -->
     <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <h1 class="blog-title">Derek and Romaine 2.0</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
       </div>
     </div>
 
@@ -31,9 +32,6 @@
     <!-- Start of Container and Row elements -->
     <div class="container">
       <div class="row">
-
-
-
 
       <%= yield %>
 
@@ -68,8 +66,8 @@
               <li><a href="#">Facebook</a></li>
             </ol>
           </div>
-        </div><!-- /.blog-sidebar -->
-        <!-- end of sidebar -->
+        </div>
+      </div>
 
         <!-- start of footer -->
             <footer class="blog-footer">
@@ -80,11 +78,9 @@
     </footer>
 
     <!-- end of footer -->
-
-      <%= render "shared/nav", location: 'bottom' %>
       
       <%= source_helper("blog") %>
-        </div>
+
     </div>
   </body>
 </html>
