--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -5,51 +5,26 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title><%= @page_title %></title>
       <%= csrf_meta_tags %>
-
       <meta name="keywords" content="<%= @seo_keywords %>" />
-
       <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
       <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    </head>
+  </head>
 
   <body>
-
-
-  <%= render 'shared/blog_nav' %>
-
-
-    <!-- start of blog header  -->
-    <div class="blog-header">
-      <div class="container">
-        <h1 class="blog-title">Derek and Romaine 2.0</h1>
-        <p class="lead blog-description">An example blog template built with Bootstrap.</p>
-        <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
-      </div>
-    </div>
-
-    <!-- end of blog header -->
-
+    <%= render 'shared/blog_nav' %>
+    <%= render 'shared/blog_masthead' %>
     <!-- Start of Container and Row elements -->
     <div class="container">
       <div class="row">
-
-      <%= yield %>
-
-      <%= render 'shared/blog_sidebar' %>
+        
+        <%= yield %>
+        
+        <%= render 'shared/blog_sidebar' %>
       </div>
 
-        <!-- start of footer -->
-      <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-    </footer>
+      <%= render 'shared/blog_footer' %>   
 
-    <!-- end of footer -->
-      
       <%= source_helper("blog") %>
-
     </div>
   </body>
 </html>
