--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,11 @@
 <h1>About Me</h1>
 <hr>
-<p>I'm just starting to learn software development on my own. I find it fasinacting. I started with Wordpress and PHP, and I'm making my way into the world of Ruby right now. Next is JavaScript and JQuery.</p>
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag "https://community.emc.com/6.0.1.0/profile-image-display.jspa?imageID=8868&size=200", alt: "Jeff Dembinski's Profile Image" %>
+  </div>
+
+  <div class="col-md-8">
+    <p>I'm just starting to learn software development on my own. I find it fasinacting. I started with Wordpress and PHP, and I'm making my way into the world of Ruby right now. Next is JavaScript and JQuery.</p>
+  </div>
+</div>
