--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,27 +1,25 @@
-<div class="container">
+<div class="container portfolio-container">
   <div class="row">
     <div class="col-md-7">
-      <%= image_tag @portfolio_item.main_image %>
+      <%= image_tag @portfolio_item.main_image, width: '100%' %>
     </div>
 
-      <div class="col-md-5">
-        <h1><%= @portfolio_item.title %></h1>
+    <div class="col-md-5">
+    <h1><%= @portfolio_item.title %></h1>
 
-        <hr>
+    <hr>
 
-        <em><%= @portfolio_item.subtitle %></em>
+    <em><%= @portfolio_item.subtitle %></em>
 
-        <p><%= @portfolio_item.body %></p>
+    <p><%= @portfolio_item.body %></p>
 
-        <hr>
+    <hr>
 
-        <h2>Technologies Used</h2>
-
-        <%= @portfolio_item.technologies.each do |t| %>
-        <p><%= t.name %></p>
-        <% end %>
-        
-      </div>
+    <h2>Technologies Used</h2>
+      <% @portfolio_item.technologies.each do |t| %>
+      <p><%= t.name %></p>
+      <% end %>    
+    </div>
   </div>
 </div>
 
