--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -14,11 +14,16 @@
     </div>
 
     <div class="form-group">
-      <%= f.file_field :main_image %>
+      <label class="btn btn-primary">
+        Choose your MAIN image file <%= f.file_field :main_image, style: 'display:none;' %>
+      </label>
+      
     </div>
 
     <div class="form-group">
-      <%= f.file_field :thumb_image %>
+      <label class="btn btn-primary">
+        Choose your THUMB image file <%= f.file_field :thumb_image, style: 'display:none;' %>
+      </label>
     </div>
 
   </div>
