--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -43,11 +43,11 @@
   <h2>Technologies Used</h2>
   <div>
     <%= f.fields_for :technologies do |technology_form| %>
-      <div class="form-group">
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name, class: 'form-control' %>
-      </div class="form-group">
+      <%= render 'technology_fields', f: technology_form %>
    <% end %>
+   <div>
+    <%= link_to_add_association "Add Technolgy", f, :technologies %>
+   </div>
 
   </div>
 </div>
