--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,18 +1,22 @@
-<h1>Give a Guy a Chance! Hire Me!</h1>
-<hr>
-<div class="row">
-  <div class="col-md-6">
+<div class="app-card-container">
+<div class="card">
+    <h1>Give a Guy a Chance! Hire Me!</h1>
+    <hr>
+    <div class="row">
+      <div class="col-md-6">
 
-    <p>Jeff Dembinski</p>
-    <p>336 Fort Washington Ave</p>
-    <p>Apt 1A</p>
-    <p>New York, NY 10033</p>
-    <p><%= number_to_phone "6465100202" %></p>
-    <p><a href="mailto:jeff@magicquotes.io?subject=PortfolioContact" "Email Me">Email Me</a></p>
+        <p>Jeff Dembinski</p>
+        <p>336 Fort Washington Ave</p>
+        <p>Apt 1A</p>
+        <p>New York, NY 10033</p>
+        <p><%= number_to_phone "6465100202" %></p>
+        <p><a href="mailto:jeff@magicquotes.io?subject=PortfolioContact" "Email Me">Email Me</a></p>
 
-  </div>
-  <div class="col-md-6">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3018.1700311854274!2d-73.94202134941247!3d40.84619057921601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2f69f12edcdef%3A0x6a7a12839a36f702!2s336+Fort+Washington+Ave%2C+New+York%2C+NY+10033!5e0!3m2!1sen!2sus!4v1494110583923" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3018.1700311854274!2d-73.94202134941247!3d40.84619057921601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2f69f12edcdef%3A0x6a7a12839a36f702!2s336+Fort+Washington+Ave%2C+New+York%2C+NY+10033!5e0!3m2!1sen!2sus!4v1494110583923" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
   </div>
 </div>
 
