--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,6 +9,54 @@
 
       <div class="col-md-8">
         <p>I'm just starting to learn software development on my own. I find it fasinacting. I started with Wordpress and PHP, and I'm making my way into the world of Ruby right now. Next is JavaScript and JQuery.</p>
+
+        <p>
+          <button 
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#jobHistory"
+            aria-expanded="false"
+            aria-controler="jobHistory"
+          >
+
+            Job History
+          </button>
+
+          <button 
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#education"
+            aria-expanded="false"
+            aria-controler="education"
+          >
+
+            Education
+          </button>
+        </p>
+
+        <p>
+          <div class="collapse" id="jobHistory">
+            <div class="card card-block">
+            Job 1
+            </div>
+            <div class="card card-block">
+            Job 2
+            </div>
+          </div>
+        </p>
+
+        <p>
+          <div class="collapse" id="education">
+            <div class="card card-block">
+            University of Phoenix - Bachelor of Science in Business - Information Systems
+            </div>
+            <div class="card card-block">
+            University of Phoenix - Masters Degree in Business
+            </div>
+          </div>
+        </p>
       </div>
     </div>
   </div>
