Added view component to skills

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,7 +4,27 @@
     <hr>
     <div class="row">
       <div class="col-md-4">
-        <%= image_tag "https://community.emc.com/6.0.1.0/profile-image-display.jspa?imageID=8868&size=200", alt: "Jeff Dembinski's Profile Image", class: 'profile-image' %>
+        <%= image_tag "https://community.emc.com/6.0.1.0/profile-image-display.jspa?imageID=8868&size=200", alt: "Jeff Dembinski's Profile Image", class: "profile-image" %>
+ 
+
+        <div class="skills">
+          <% @skills.each do |skill| %>
+            <h4><%= skill.title %></h4>
+            <div class="skill">
+              <div class="progress">
+                <div 
+                  class="progress-bar progress-bar-striped bg-info"
+                  role="progressbar"
+                  aria-valuenow="<%= skill.percent_utilized %>"
+                  aria-max="100"
+                  style="width: <%= skill.percent_utilized %>%"
+                >
+                <%= skill.percent_utilized %>%
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
       </div>
 
       <div class="col-md-8">
