--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import "gritter";
+@import url('https://fonts.googleapis.com/css?family=Lato|Roboto+Slab');
 
 /*
  * Globals
@@ -27,14 +28,26 @@ a:hover {
  * Base structure
  */
 
+
+
 html,
 body {
+  font-family: 'Lato', sans-serif;
   height: 100%;
 }
 body {
   color: #fff;
   text-align: center;
   text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+  font-family: 'Roboto Slab', serif;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
