--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -7,7 +7,7 @@
         <p class="text-muted">See the variety of listening options you have on the new Derek and Romaine Media website.</p>
       </div>
       <div class="col-sm-4 py-4">
-        <h4 class="text-white">Expore</h4>
+        <h4 class="text-white">Explore</h4>
         <ul class="list-unstyled">
           <%= nav_helper 'text-white', 'li' %>
           <li><%= login_helper 'text-white' %></li>
