--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 <div class="inner cover">
   <h1 class="cover-heading">/MagicQuotes/</h1>
-  <p class="lead">Software development that escapes the imgaination.</p>
+  <p class="lead">
+    <span class="element"></span>
+  </p>
   <p class="lead">
     <%= link_to "About Me", about_path, class: "btn btn-lg btn-secondary" %>
   </p>
